--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${version.webdrivermanager}</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
     <build>
